--- a/src/styles/drawingArea.css
+++ b/src/styles/drawingArea.css
@@ -26,4 +26,42 @@
   width: 100%;
   background-color: blue;
 }
+
+.devicesBar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 7vh;
+  padding: .5rem;
+}
+
+.device {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: transparent;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.device img {
+  width: 100%;
+  height: 70%;
+}
+
+.device p {
+  margin: 0;
+  height: 30%;
+}
 /*# sourceMappingURL=drawingArea.css.map */
