--- a/src/styles/drawingArea.scss
+++ b/src/styles/drawingArea.scss
@@ -22,3 +22,15 @@
     width: 100%;
     background-color: blue;
 }
+
+.devicesBar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 7vh;
+    padding: .5rem;
+}
+
+.device{
+    @include device()
+}
