--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,3 +11,19 @@ $titleFont: Arial, Helvetica, sans-serif;
     color: $lightColor;
     font-size: 20px;
 }
+
+@mixin device {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    align-items: center;
+    
+    img{
+        width: 100%;
+        height: 70%;
+    }
+    p{
+        margin:0;
+        height: 30%;
+    }
+}
