--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,10 +35,34 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: brown;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 7vh;
+  padding: .5rem;
+}
+
+.device {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: transparent;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.device img {
+  width: 100%;
+  height: 70%;
+}
+
+.device p {
+  margin: 0;
+  height: 30%;
 }
 
 .App {
