--- a/src/styles/drawingArea.css
+++ b/src/styles/drawingArea.css
@@ -1,5 +1,13 @@
 .drawingArea {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .navbar {
@@ -25,19 +33,20 @@
   height: 100%;
   width: 100%;
   background-color: blue;
+  position: relative;
 }
 
 .devicesBar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: 7vh;
+  height: 100%;
   padding: .5rem;
 }
 
