--- a/src/styles/drawingArea.scss
+++ b/src/styles/drawingArea.scss
@@ -1,7 +1,10 @@
 @import "./variables.scss";
 
 .drawingArea{
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
 .navbar{
@@ -21,13 +24,14 @@
     height: 100%;
     width: 100%;
     background-color: blue;
+    position: relative;
 }
 
 .devicesBar{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
-    height: 7vh;
+    height: 100%;
     padding: .5rem;
 }
 
