--- a/src/styles/drawingArea.scss
+++ b/src/styles/drawingArea.scss
@@ -4,7 +4,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .navbar{
@@ -21,18 +21,20 @@
 }
 
 .board{
-    height: 100%;
-    width: 100%;
+    height: 80vh;
+    width: 90vw;
     background-color: blue;
     position: relative;
+    // display: absolute;
 }
 
 .devicesBar{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
-    height: 100%;
-    padding: .5rem;
+    height: 20%;
+    width: 100%;
+    // padding: .5rem;
 }
 
 .device{
