draw line from/to the center of devices

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,8 +19,8 @@ $titleFont: Arial, Helvetica, sans-serif;
     align-items: center;
     
     img{
-        width: 100%;
-        height: 70%;
+        width: 25px;
+        height: 25px;
     }
     p{
         margin:0;
