--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,113 +1,46 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 .drawingArea {
-  width: 100vw;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  overflow: hidden;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.navbar {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #bbb2a4;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 5%;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 100%;
-}
-
-.navbar a {
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-}
-
-.board {
-  height: 80vh;
-  width: 90vw;
-  background-color: blue;
-  position: relative;
 }
 
 .devicesBar {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background-color: rgb(180, 180, 228);
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  height: 20%;
+  flex-direction: column;
+  width: 10vw;
+  height: 100vh;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.board {
   width: 100%;
+  height: 100vh;
+  background-color: rgba(229, 229, 247, 1);
+  background-image:  linear-gradient(rgba(68, 76, 247, 0.4) 2px, transparent 2px), linear-gradient(90deg, rgba(68, 76, 247, 0.4) 2px, transparent 2px), linear-gradient(rgba(68, 76, 247, 0.4) 1px, transparent 1px), linear-gradient(90deg, rgba(68, 76, 247, 0.4) 1px, #e5e5f7 1px);
+  background-size: 50px 50px, 50px 50px, 10px 10px, 10px 10px;
+  background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 .device {
-  display: -webkit-box;
-  display: -ms-flexbox;
+  width: 8rem;
+  height: 8rem;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: transparent;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.device img {
-  width: 100%;
+.deviceOnBoard {
+  border: 1px solid black;
+  background-color: white;
+}
+
+.device img{
+  width: 70%;
   height: 70%;
 }
-
-.device p {
-  margin: 0;
-  height: 30%;
-}
-
-.App {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  height: 100%;
-}
-
-aside {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  height: 90vh;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-aside button {
-  width: 20vw;
-  height: 5vh;
-  background-color: red;
-  border: none;
-  border-radius: 8px;
-  color: blanchedalmond;
-  font-size: 20px;
-}
-/*# sourceMappingURL=styles.css.map */
