--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,3 +44,38 @@
   width: 70%;
   height: 70%;
 }
+
+.popup{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+
+  background-color: rgb(0,0,0,0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.popup-inner{
+  position: relative;
+  padding: 32px;
+  width: 100%;
+  max-width: 640px;
+  background-color: white;
+}
+
+.popup-inner .close-btn{
+  position: absolute;
+  padding: 0.3rem;
+  top: 0.2rem;
+  right: 0.2rem;
+  font-weight: 700;
+  font-size: larger;
+  border: 0;
+  background: none;
+  cursor: pointer;
+  transform: rotate(45deg);
+}
