Adicionado cores e mouse ao poder alterar

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,3 +79,15 @@
   cursor: pointer;
   transform: rotate(45deg);
 }
+
+.greenBtn {
+  background-color: greenyellow;
+}
+
+.redBtn {
+  background-color: red;
+}
+
+.mudaMouse {
+  cursor: cell;
+}
