--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,13 +79,24 @@
   cursor: pointer;
   transform: rotate(45deg);
 }
-
-.greenBtn {
-  background-color: greenyellow;
+.conn-actions-button{
+  width: 7rem;
+  height: 7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 0;
+  background-color: transparent;
 }
 
-.redBtn {
-  background-color: red;
+.on {
+  /* background-color: greenyellow; */
+  opacity: 0.5;
+}
+
+.off {
+  /* background-color: red; */
+  opacity: 1;
 }
 
 .mudaMouse {
