--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,8 @@
 *{
   padding: 0;
   margin: 0;
+  font-family: sans-serif;
+  font-size: 100%;
 }
 
 .drawingArea {
@@ -8,15 +10,25 @@
   display: flex;
 }
 
-.devicesBar {
+aside {
   background-color: rgb(180, 180, 228);
   display: flex;
   flex-direction: column;
   width: 10vw;
   height: 100vh;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
+
+
+.bar{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4vh 0 ;
+}
+
 
 .board {
   width: 100%;
@@ -72,8 +84,6 @@
   padding: 0.3rem;
   top: 0.2rem;
   right: 0.2rem;
-  font-weight: 700;
-  font-size: larger;
   border: 0;
   background: none;
   cursor: pointer;
@@ -101,4 +111,74 @@
 
 .mudaMouse {
   cursor: cell;
+}
+
+
+.form-edit {
+  align-items: center;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 1rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-between;
+  padding: 2rem;
+  font-size: 16pt;
+
+}
+
+input{
+  padding: 0.5rem;  
+  box-sizing: border-box;
+  width: 100%;
+}
+
+label {
+  width: 100%;
+  padding: 0.2rem;  
+  box-sizing: border-box;
+  
+}
+
+.label-checkbox{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  justify-content: space-around;
+}
+
+input:focus{
+  border: 3px solid #555;
+  justify-content: flex-start;
+} 
+
+input[type=button], input[type=submit]{
+  background-color: rgb(180, 180, 228);
+  border: none;
+  color: black;
+  padding:1rem;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 50%;
+  font-size: 16pt;
+}
+
+.form-buttons{
+  display: flex;
+  flex-direction: row;
+}
+
+
+h1{
+  font-size: 20pt;
+}
+
+input[type=checkbox]{
+  width: auto;
+  height: 1.5rem;
+  width: 1.5rem;
+  background-color: #eee;
 }
