--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -163,12 +163,30 @@ input[type=button], input[type=submit]{
   margin: 4px 2px;
   cursor: pointer;
   width: 50%;
-  font-size: 16pt;
+  font-size: 14pt;
 }
 
 .form-buttons{
   display: flex;
   flex-direction: row;
+}
+
+.buttons button{
+  background-color: rgb(180, 180, 228);
+  border: 0;
+  color: black;
+  padding:1rem;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 50%;
+  font-size: 14pt;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 
