Aumento do X de fechar as coisa

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -88,6 +88,7 @@ aside {
   background: none;
   cursor: pointer;
   transform: rotate(45deg);
+  font-size: 2rem;
 }
 .conn-actions-button{
   width: 5rem;
